--- a/templates/login.html
+++ b/templates/login.html
@@ -25,17 +25,39 @@ top:150px;
 <body>
   <div class = "login">
     <form method="POST" >
+    <center>
+      <input id = "type" type = "hidden" name = "type" value="Log">
       <h1>Login</h1>
-
+    </br></br>
+    <b>  Trainername:</b><input id = "Uname" type = "text" name = "Username">
+      <br><br>
+    <b>  Password:</b><input id = "Pass" type = "password" name = "pw">
+    <br><br>
+      <button id="submit" type="submit" >Submit</button>
+    </center>
     </form>
   </div>
   <div class = "reg">
     <form method="POST" >
-
+      <input id = "type" type = "hidden" name = "type" value="Reg">
         <center>
           <h1>Register</h1>
-          
+        </br></br>
+        <b>  Trainername:</b><input id = "Uname" type = "text" name = "Username">
+          <br><br>
+        <b>  Password:</b><input id = "Pass" type = "password" name = "pw">
+        <br><br>
+        <button id="submit" type="submit" >Submit</button>
         </center>
     </form>
   </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  {% if mess %}
+   <center>
+   {{mess}}
+   </center>
+   {% endif %}
 </body>
